Not smart enough to fix the side-by-side list, but found missing config option for pdf pages and added height parameter for block to prevent overflow

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -148,6 +148,7 @@ body {
         color: $grey-dark;
 
         &:before {
+            height: 100%;
             content: '';
             position: fixed;
             top: -100vh;
